--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h2 class="text-3xl font-bold mb-4">Hello, I am Mohammed </h2>
     <p class="text-lg text-gray-400 mb-4">
         Welcome to my portfolio website! <br>
-        I am a Full Stack Developer with 2 years of experience building dynamic, efficient, and user-friendly web applications. Proficient in front-end technologies like React.js, HTML, CSS, and JavaScript, as well as back-end frameworks such as Node.js and RESTful APIs, I specialize in creating seamless digital solutions from concept to deployment.<br> 
+        I am a Full Stack Developer with 2+ years of experience building dynamic, efficient, and user-friendly web applications. Proficient in front-end technologies like React.js, HTML, CSS, and JavaScript, as well as back-end frameworks such as Node.js and RESTful APIs, I specialize in creating seamless digital solutions from concept to deployment.<br> 
         Passionate about blending intuitive design with robust functionality, I focus on crafting applications that align with both user needs and business objectives, ensuring performance, scalability, and accessibility are prioritized.<br> 
         Through this website, you'll find a showcase of my projects and certifications, highlighting my technical expertise and problem-solving capabilities. If you're looking for a developer who thrives on collaboration and delivering impactful results, let's connect and build something exceptional together.
     </p>
