--- a/index.html
+++ b/index.html
@@ -67,8 +67,34 @@
     <h2 class="text-3xl font-bold mb-4">Hello, I am Mohammed </h2>
     <p class="text-lg text-gray-400 mb-4">
         Welcome to my portfolio website! <br>
-        I am a Full Stack Developer with 2+ years of experience building dynamic, efficient, and user-friendly web applications. Proficient in front-end technologies like React.js, HTML, CSS, and JavaScript, as well as back-end frameworks such as Node.js and RESTful APIs, I specialize in creating seamless digital solutions from concept to deployment.<br> 
-        Passionate about blending intuitive design with robust functionality, I focus on crafting applications that align with both user needs and business objectives, ensuring performance, scalability, and accessibility are prioritized.<br> 
+      🚀 Software Developer | React.js | JavaScript | TypeScript | Building Scalable & High-Performance Web Applications
+
+Hi there! 👋 I'm a passionate software developer with 2+ years of experience in building modern, scalable, and efficient web applications. I thrive on solving complex problems and crafting seamless user experiences using cutting-edge technologies.
+
+💻 What I Do:
+I specialize in front-end development using React.js, JavaScript, TypeScript, HTML, CSS, Tailwind CSS, and Bootstrap, ensuring pixel-perfect and responsive UI/UX. I also have strong backend expertise in Node.js, SQL, MySQL, and PostgreSQL, where I build robust RESTful APIs, manage databases, and optimize server-side logic for high-performance applications.
+
+## 🔹 Key Skills & Technologies  
+
+- **Frontend:** React.js, JavaScript, TypeScript, Redux, HTML, CSS, SCSS, Tailwind CSS, Bootstrap  
+- **Backend:** Node.js, SQL, MySQL, PostgreSQL, RESTful APIs  
+- **Database & Cloud:** MongoDB, PostgreSQL, MySQL  
+- **Tools & DevOps:** Git, GitHub, Webpack  
+- **Other Tech:** JWT Authentication, Agile Development  
+
+## 💡 What Drives Me?  
+
+- ✅ Transforming creative ideas into real-world applications  
+- ✅ Writing clean, maintainable, and scalable code  
+- ✅ Enhancing performance, accessibility, and security of web applications  
+- ✅ Continuous learning and contributing to open-source projects  
+
+
+👨‍💻 GitHub & Open Source Contributions:
+I actively contribute to open-source projects and build personal projects to stay ahead of industry trends. My repositories feature projects ranging from full-stack applications, custom React components, API integrations, and much more.
+
+🚀 Let’s Collaborate!
+I’m always open to discussing exciting projects, contributions, and learning opportunities. Feel free to explore my repositories, fork projects, and connect with me!<br> 
         Through this website, you'll find a showcase of my projects and certifications, highlighting my technical expertise and problem-solving capabilities. If you're looking for a developer who thrives on collaboration and delivering impactful results, let's connect and build something exceptional together.
     </p>
     <a href="https://drive.google.com/file/d/13pNBma9DPyqyvZcxRkkh48srvRWqdeZt/view?usp=drive_link" download="Mohammed_Resume" class="inline-block bg-blue-500 px-6 py-2 rounded text-white hover:bg-blue-600">
