--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@ I’m always open to discussing exciting projects, contributions, and learning o
                 <div class="bg-gray-700 p-4 rounded text-center">
                     <h3 class="font-bold">GitHub</h3>
                 </div>
+                 <div class="bg-gray-700 p-4 rounded text-center">
+                    <h3 class="font-bold">WebPack</h3>
+                </div>
+                 <div class="bg-gray-700 p-4 rounded text-center">
+                    <h3 class="font-bold">Debugging</h3>
+                </div>
             </div>
         </div>
     </section>
@@ -178,8 +184,22 @@ I’m always open to discussing exciting projects, contributions, and learning o
                 <h3 class="text-xl font-bold">Project Name 2: Proveway </h3>
                 <p class="text-gray-400 mt-2">Interactive Boxes is a web application that allows users to create, customize, and interact with dynamic boxes on the screen. Built with a focus on frontend development, the project features animations, color customizations, and interactive elements, making it ideal for UI/UX demonstrations and creativity for Proveway Company.
                 </p>
-                <a href="https://saqeebalimk.github.io/Interactive-Boxes/" target="_blank" class="inline-block bg-blue-500 px-4 py-2 rounded text-white hover:bg-blue-600">
+                <a href="https://www.mentorsity.com/" target="_blank" class="inline-block bg-blue-500 px-4 py-2 rounded text-white hover:bg-blue-600">
                     Visit Interactive Boxes
+                </a>            
+            </div>
+             <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+                <h3 class="text-xl font-bold">Project Name 3: Mentorsity </h3>
+                <p class="text-gray-400 mt-2">Mentosity is a web platform designed to connect mentors and mentees, fostering professional growth and skill development. Built with a user-friendly interface, it enables seamless communication, personalized mentorship programs, and progress tracking. The platform supports scheduling, resource sharing, and interactive sessions, making mentorship accessible and impactful for individuals and organizations alike.
+                    Visit Mentorsity
+                </a>            
+            </div>
+            <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+                <h3 class="text-xl font-bold">Project Name 4: OTT Platform </h3>
+                <p class="text-gray-400 mt-2">The OTT Platform is a web application designed for seamless streaming of video content, built for Maksof Company. It features a user-friendly interface, personalized recommendations, and high-performance video playback. With advanced search, subscription management, and multi-device support, the platform delivers an immersive viewing experience while focusing on scalability and smooth UI/UX interactions.
+                </p>
+                <a href="https://ottplatform.mobirisesite.com/" target="_blank" class="inline-block bg-blue-500 px-4 py-2 rounded text-white hover:bg-blue-600">
+                    Visit OTT Platform
                 </a>            
             </div>
         </div>
