--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <header class="bg-gray-700 py-16">
         <div class="container mx-auto text-center">
             <h1 class="text-4xl font-bold mb-4">Hello, I'm a Software Developer </h1>
-            <p class="text-xl">"Creating engaging,transforming ideas into seamless digital experiences and development."</p>
+            <p class="text-xl">"Transforming innovative ideas into seamless, engaging, and impactful digital experiences through cutting-edge development."</p>
             <a href="#projects" class="mt-6 inline-block bg-blue-500 px-6 py-2 rounded hover:bg-blue-600">View My Work</a>
         </div>
     </header>
@@ -67,34 +67,41 @@
     <h2 class="text-3xl font-bold mb-4">Hello, I am Mohammed </h2>
     <p class="text-lg text-gray-400 mb-4">
         Welcome to my portfolio website! <br>
-      🚀 Software Developer | React.js | JavaScript | TypeScript | Building Scalable & High-Performance Web Applications
+          <h1>🚀 Software Developer | React.js | JavaScript | TypeScript | Building Scalable & High-Performance Web Applications</h1>
 
-Hi there! 👋 I'm a passionate software developer with 2+ years of experience in building modern, scalable, and efficient web applications. I thrive on solving complex problems and crafting seamless user experiences using cutting-edge technologies.
+<p>Hi there! 👋 I'm a passionate software developer with 2+ years of experience in building modern, scalable, and efficient web applications. I thrive on solving complex problems and crafting seamless user experiences using cutting-edge technologies.</p>
 
-💻 What I Do:
-I specialize in front-end development using React.js, JavaScript, TypeScript, HTML, CSS, Tailwind CSS, and Bootstrap, ensuring pixel-perfect and responsive UI/UX. I also have strong backend expertise in Node.js, SQL, MySQL, and PostgreSQL, where I build robust RESTful APIs, manage databases, and optimize server-side logic for high-performance applications.
+<h2>💻 What I Do:</h2>
+<ul>
+  <li>Specialize in front-end development using React.js, JavaScript, TypeScript, HTML, CSS, Tailwind CSS, and Bootstrap.</li>
+  <li>Ensure pixel-perfect and responsive UI/UX.</li>
+  <li>Strong backend expertise in Node.js, SQL, MySQL, and PostgreSQL.</li>
+  <li>Build robust RESTful APIs, manage databases, and optimize server-side logic for high-performance applications.</li>
+</ul>
 
-## 🔹 Key Skills & Technologies  
+<h2>🔹 Key Skills & Technologies</h2>
+<ul>
+  <li><strong>Frontend:</strong> React.js, JavaScript, TypeScript, Redux, HTML, CSS, SCSS, Tailwind CSS, Bootstrap</li>
+  <li><strong>Backend:</strong> Node.js, SQL, MySQL, PostgreSQL, RESTful APIs</li>
+  <li><strong>Database & Cloud:</strong> MongoDB, PostgreSQL, MySQL</li>
+  <li><strong>Tools & DevOps:</strong> Git, GitHub, Webpack</li>
+  <li><strong>Other Tech:</strong> JWT Authentication, Agile Development</li>
+</ul>
 
-- **Frontend:** React.js, JavaScript, TypeScript, Redux, HTML, CSS, SCSS, Tailwind CSS, Bootstrap  
-- **Backend:** Node.js, SQL, MySQL, PostgreSQL, RESTful APIs  
-- **Database & Cloud:** MongoDB, PostgreSQL, MySQL  
-- **Tools & DevOps:** Git, GitHub, Webpack  
-- **Other Tech:** JWT Authentication, Agile Development  
+<h2>💡 What Drives Me?</h2>
+<ul>
+  <li>✅ Transforming creative ideas into real-world applications</li>
+  <li>✅ Writing clean, maintainable, and scalable code</li>
+  <li>✅ Enhancing performance, accessibility, and security of web applications</li>
+  <li>✅ Continuous learning and contributing to open-source projects</li>
+</ul>
 
-## 💡 What Drives Me?  
+<h2>👨‍💻 GitHub & Open Source Contributions:</h2>
+<p>I actively contribute to open-source projects and build personal projects to stay ahead of industry trends. My repositories feature projects ranging from full-stack applications, custom React components, API integrations, and much more.</p>
 
-- ✅ Transforming creative ideas into real-world applications  
-- ✅ Writing clean, maintainable, and scalable code  
-- ✅ Enhancing performance, accessibility, and security of web applications  
-- ✅ Continuous learning and contributing to open-source projects  
+<h2>🚀 Let’s Collaborate!</h2>
+<p>I’m always open to discussing exciting projects, contributions, and learning opportunities. Feel free to explore my repositories, fork projects, and connect with me!</p>
 
-
-👨‍💻 GitHub & Open Source Contributions:
-I actively contribute to open-source projects and build personal projects to stay ahead of industry trends. My repositories feature projects ranging from full-stack applications, custom React components, API integrations, and much more.
-
-🚀 Let’s Collaborate!
-I’m always open to discussing exciting projects, contributions, and learning opportunities. Feel free to explore my repositories, fork projects, and connect with me!<br> 
         Through this website, you'll find a showcase of my projects and certifications, highlighting my technical expertise and problem-solving capabilities. If you're looking for a developer who thrives on collaboration and delivering impactful results, let's connect and build something exceptional together.
     </p>
     <a href="https://drive.google.com/file/d/1yrayeUBrS7WHuwb4Ji2exbOLjdrvTwCh/view?usp=drive_link" download="Mohammed_Resume" class="inline-block bg-blue-500 px-6 py-2 rounded text-white hover:bg-blue-600">
@@ -184,13 +191,14 @@ I’m always open to discussing exciting projects, contributions, and learning o
                 <h3 class="text-xl font-bold">Project Name 2: Proveway </h3>
                 <p class="text-gray-400 mt-2">Interactive Boxes is a web application that allows users to create, customize, and interact with dynamic boxes on the screen. Built with a focus on frontend development, the project features animations, color customizations, and interactive elements, making it ideal for UI/UX demonstrations and creativity for Proveway Company.
                 </p>
-                <a href="https://www.mentorsity.com/" target="_blank" class="inline-block bg-blue-500 px-4 py-2 rounded text-white hover:bg-blue-600">
+                <a href="https://saqeebalimk.github.io/Interactive-Boxes/" target="_blank" class="inline-block bg-blue-500 px-4 py-2 rounded text-white hover:bg-blue-600">
                     Visit Interactive Boxes
                 </a>            
             </div>
              <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
                 <h3 class="text-xl font-bold">Project Name 3: Mentorsity </h3>
                 <p class="text-gray-400 mt-2">Mentosity is a web platform designed to connect mentors and mentees, fostering professional growth and skill development. Built with a user-friendly interface, it enables seamless communication, personalized mentorship programs, and progress tracking. The platform supports scheduling, resource sharing, and interactive sessions, making mentorship accessible and impactful for individuals and organizations alike.
+                <a href="https://www.mentorsity.com/" target="_blank" class="inline-block bg-blue-500 px-4 py-2 rounded text-white hover:bg-blue-600">
                     Visit Mentorsity
                 </a>            
             </div>
