--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
     <h2 class="text-3xl font-bold mb-4">Hello, I am Mohammed </h2>
     <p class="text-lg text-gray-400 mb-4">
         Welcome to my portfolio website! <br>
-          <h1>🚀 Software Developer | React.js | JavaScript | TypeScript | Building Scalable & High-Performance Web Applications</h1>
+          <h1>🚀 Software Developer | React.js | JavaScript | TypeScript</h1>
+<h2>Building Scalable & High-Performance Web Applications</h2>
 
-<p>Hi there! 👋 I'm a passionate software developer with 2+ years of experience in building modern, scalable, and efficient web applications. I thrive on solving complex problems and crafting seamless user experiences using cutting-edge technologies.</p>
+<p>Hi there! 👋 I'm a passionate software developer with 2+ years of experience in building modern, scalable, and efficient web applications.  
+I thrive on solving complex problems and crafting seamless user experiences using cutting-edge technologies.</p>
+
+<hr>
 
 <h2>💻 What I Do:</h2>
 <ul>
@@ -78,6 +82,8 @@
   <li>Strong backend expertise in Node.js, SQL, MySQL, and PostgreSQL.</li>
   <li>Build robust RESTful APIs, manage databases, and optimize server-side logic for high-performance applications.</li>
 </ul>
+
+<hr>
 
 <h2>🔹 Key Skills & Technologies</h2>
 <ul>
@@ -88,19 +94,28 @@
   <li><strong>Other Tech:</strong> JWT Authentication, Agile Development</li>
 </ul>
 
+<hr>
+
 <h2>💡 What Drives Me?</h2>
 <ul>
-  <li>✅ Transforming creative ideas into real-world applications</li>
-  <li>✅ Writing clean, maintainable, and scalable code</li>
-  <li>✅ Enhancing performance, accessibility, and security of web applications</li>
-  <li>✅ Continuous learning and contributing to open-source projects</li>
+  <li>✅ Transforming innovative ideas into seamless, engaging, and impactful digital experiences through cutting-edge development.</li>
+  <li>✅ Writing clean, maintainable, and scalable code.</li>
+  <li>✅ Enhancing performance, accessibility, and security of web applications.</li>
+  <li>✅ Continuous learning and contributing to open-source projects.</li>
 </ul>
 
+<hr>
+
 <h2>👨‍💻 GitHub & Open Source Contributions:</h2>
-<p>I actively contribute to open-source projects and build personal projects to stay ahead of industry trends. My repositories feature projects ranging from full-stack applications, custom React components, API integrations, and much more.</p>
+<p>I actively contribute to open-source projects and build personal projects to stay ahead of industry trends.  
+My repositories feature projects ranging from full-stack applications, custom React components, API integrations, and much more.</p>
+
+<hr>
 
 <h2>🚀 Let’s Collaborate!</h2>
-<p>I’m always open to discussing exciting projects, contributions, and learning opportunities. Feel free to explore my repositories, fork projects, and connect with me!</p>
+<p>I’m always open to discussing exciting projects, contributions, and learning opportunities.  
+Feel free to explore my repositories, fork projects, and connect with me!</p>
+
 
         Through this website, you'll find a showcase of my projects and certifications, highlighting my technical expertise and problem-solving capabilities. If you're looking for a developer who thrives on collaboration and delivering impactful results, let's connect and build something exceptional together.
     </p>
