--- a/index.html
+++ b/index.html
@@ -62,67 +62,74 @@
         </div>
     </header>
 
-   <!-- About Me Section -->
-<section id="about" class="container mx-auto py-16 px-4">
-    <h2 class="text-3xl font-bold mb-4">Hello, I am Mohammed </h2>
-    <p class="text-lg text-gray-400 mb-4">
-        Welcome to my portfolio website! <br>
-          <h1>🚀 Software Developer | React.js | JavaScript | TypeScript</h1>
-<h2>Building Scalable & High-Performance Web Applications</h2>
-
-<p>Hi there! 👋 I'm a passionate software developer with 2+ years of experience in building modern, scalable, and efficient web applications.  
-I thrive on solving complex problems and crafting seamless user experiences using cutting-edge technologies.</p>
-
-<hr>
-
-<h2>💻 What I Do:</h2>
-<ul>
-  <li>Specialize in front-end development using React.js, JavaScript, TypeScript, HTML, CSS, Tailwind CSS, and Bootstrap.</li>
-  <li>Ensure pixel-perfect and responsive UI/UX.</li>
-  <li>Strong backend expertise in Node.js, SQL, MySQL, and PostgreSQL.</li>
-  <li>Build robust RESTful APIs, manage databases, and optimize server-side logic for high-performance applications.</li>
-</ul>
-
-<hr>
-
-<h2>🔹 Key Skills & Technologies</h2>
-<ul>
-  <li><strong>Frontend:</strong> React.js, JavaScript, TypeScript, Redux, HTML, CSS, SCSS, Tailwind CSS, Bootstrap</li>
-  <li><strong>Backend:</strong> Node.js, SQL, MySQL, PostgreSQL, RESTful APIs</li>
-  <li><strong>Database & Cloud:</strong> MongoDB, PostgreSQL, MySQL</li>
-  <li><strong>Tools & DevOps:</strong> Git, GitHub, Webpack</li>
-  <li><strong>Other Tech:</strong> JWT Authentication, Agile Development</li>
-</ul>
-
-<hr>
-
-<h2>💡 What Drives Me?</h2>
-<ul>
-  <li>✅ Transforming innovative ideas into seamless, engaging, and impactful digital experiences through cutting-edge development.</li>
-  <li>✅ Writing clean, maintainable, and scalable code.</li>
-  <li>✅ Enhancing performance, accessibility, and security of web applications.</li>
-  <li>✅ Continuous learning and contributing to open-source projects.</li>
-</ul>
-
-<hr>
-
-<h2>👨‍💻 GitHub & Open Source Contributions:</h2>
-<p>I actively contribute to open-source projects and build personal projects to stay ahead of industry trends.  
-My repositories feature projects ranging from full-stack applications, custom React components, API integrations, and much more.</p>
-
-<hr>
-
-<h2>🚀 Let’s Collaborate!</h2>
-<p>I’m always open to discussing exciting projects, contributions, and learning opportunities.  
-Feel free to explore my repositories, fork projects, and connect with me!</p>
-
-
-        Through this website, you'll find a showcase of my projects and certifications, highlighting my technical expertise and problem-solving capabilities. If you're looking for a developer who thrives on collaboration and delivering impactful results, let's connect and build something exceptional together.
+<!-- About Me Section -->
+<section id="about" class="container mx-auto py-16 px-6 bg-gradient-to-r from-blue-900 via-gray-900 to-gray-800 text-white rounded-lg shadow-lg">
+    <h2 class="text-4xl font-extrabold mb-6 text-center">🚀 Hello, I am <span class="text-blue-400">Mohammed</span></h2>
+    <p class="text-lg text-gray-300 mb-6 text-center">
+        Welcome to my portfolio website! Here, you'll explore my journey in software development, projects, and certifications.
     </p>
-    <a href="https://drive.google.com/file/d/1yrayeUBrS7WHuwb4Ji2exbOLjdrvTwCh/view?usp=drive_link" download="Mohammed_Resume" class="inline-block bg-blue-500 px-6 py-2 rounded text-white hover:bg-blue-600">
-        My Resume
-    </a>
+
+    <div class="border-l-4 border-blue-400 pl-4 text-gray-300">
+        <h1 class="text-2xl font-bold text-blue-400 mb-2">🚀 Software Developer | React.js | JavaScript | TypeScript</h1>
+        <h2 class="text-xl font-semibold mb-4">Building Scalable & High-Performance Web Applications</h2>
+        <p class="text-lg leading-relaxed">
+            Hi there! 👋 I'm a passionate software developer with 2+ years of experience in building modern, scalable, and efficient web applications.  
+            I thrive on solving complex problems and crafting seamless user experiences using cutting-edge technologies.
+        </p>
+    </div>
+
+    <hr class="border-gray-600 my-6">
+
+    <h2 class="text-2xl font-bold text-blue-400 mb-4">💻 What I Do:</h2>
+    <ul class="bg-gray-900 p-4 rounded-lg shadow-md">
+        <li class="mb-2">✅ Frontend development using <strong>React.js, JavaScript, TypeScript, HTML, CSS, Tailwind CSS, Bootstrap</strong></li>
+        <li class="mb-2">✅ Pixel-perfect & responsive UI/UX design</li>
+        <li class="mb-2">✅ Backend expertise in <strong>Node.js, SQL, MySQL, PostgreSQL</strong></li>
+        <li>✅ RESTful API development & database management</li>
+    </ul>
+
+    <hr class="border-gray-600 my-6">
+
+    <h2 class="text-2xl font-bold text-blue-400 mb-4">🔹 Key Skills & Technologies</h2>
+    <ul class="grid grid-cols-2 gap-4 bg-gray-900 p-4 rounded-lg shadow-md">
+        <li>📌 <strong>Frontend:</strong> React.js, JavaScript, TypeScript, Redux, HTML, CSS, SCSS, Tailwind</li>
+        <li>📌 <strong>Backend:</strong> Node.js, SQL, MySQL, PostgreSQL</li>
+        <li>📌 <strong>Database:</strong> MongoDB, PostgreSQL, MySQL</li>
+        <li>📌 <strong>Tools:</strong> Git, GitHub, Webpack</li>
+    </ul>
+
+    <hr class="border-gray-600 my-6">
+
+    <h2 class="text-2xl font-bold text-blue-400 mb-4">💡 What Drives Me?</h2>
+    <ul class="bg-gray-900 p-4 rounded-lg shadow-md">
+        <li>✅ Transforming innovative ideas into seamless, engaging, and impactful digital experiences.</li>
+        <li>✅ Writing clean, maintainable, and scalable code.</li>
+        <li>✅ Enhancing performance, accessibility, and security of web applications.</li>
+        <li>✅ Continuous learning and contributing to open-source projects.</li>
+    </ul>
+
+    <hr class="border-gray-600 my-6">
+
+    <h2 class="text-2xl font-bold text-blue-400 mb-4">👨‍💻 GitHub & Open Source Contributions:</h2>
+    <p class="text-lg text-gray-300 mb-6">
+        I actively contribute to open-source projects and build personal projects to stay ahead of industry trends.  
+        My repositories feature projects ranging from full-stack applications, custom React components, API integrations, and much more.
+    </p>
+
+    <h2 class="text-2xl font-bold text-blue-400 mb-4">🚀 Let’s Collaborate!</h2>
+    <p class="text-lg text-gray-300 mb-6">
+        I'm always open to discussing exciting projects, contributions, and learning opportunities.  
+        Feel free to explore my repositories, fork projects, and connect with me!
+    </p>
+
+    <div class="text-center mt-6">
+        <a href="https://drive.google.com/file/d/1yrayeUBrS7WHuwb4Ji2exbOLjdrvTwCh/view?usp=drive_link" download="Mohammed_Resume"
+            class="inline-block bg-blue-500 px-6 py-3 rounded-full text-white font-semibold text-lg shadow-md hover:bg-blue-600 transition duration-300">
+            📄 My Resume
+        </a>
+    </div>
 </section>
+
 
 
 
@@ -213,6 +220,7 @@ Feel free to explore my repositories, fork projects, and connect with me!</p>
              <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
                 <h3 class="text-xl font-bold">Project Name 3: Mentorsity </h3>
                 <p class="text-gray-400 mt-2">Mentosity is a web platform designed to connect mentors and mentees, fostering professional growth and skill development. Built with a user-friendly interface, it enables seamless communication, personalized mentorship programs, and progress tracking. The platform supports scheduling, resource sharing, and interactive sessions, making mentorship accessible and impactful for individuals and organizations alike.
+                </p>
                 <a href="https://www.mentorsity.com/" target="_blank" class="inline-block bg-blue-500 px-4 py-2 rounded text-white hover:bg-blue-600">
                     Visit Mentorsity
                 </a>            
