--- a/index.html
+++ b/index.html
@@ -29,22 +29,34 @@
             <a href="#contact" class="text-white hover:text-blue-400 transition duration-300">Contact</a>
         </div>
 
-        <!-- Mobile Hamburger Menu -->
-        <div class="lg:hidden">
-            <button id="hamburger" class="text-white text-3xl focus:outline-none">
-                &#9776;
-            </button>
-        </div>
-    </div>
+    <!-- Mobile Hamburger Menu -->
+<div class="lg:hidden">
+    <button id="hamburger" class="text-white text-3xl focus:outline-none">
+        &#9776;
+    </button>
+</div>
 
-    <!-- Mobile Dropdown Menu -->
-    <div id="mobileMenu" class="lg:hidden bg-gray-900 text-white p-4 hidden">
-        <a href="#home" class="block py-2">Home</a>
-        <a href="#about" class="block py-2">About</a>
-        <a href="#projects" class="block py-2">Projects</a>
-        <a href="#certifications" class="block py-2">Certifications</a>
-        <a href="#contact" class="block py-2">Contact</a>
-    </div>
+<!-- Mobile Dropdown Menu -->
+<div id="mobileMenu" class="lg:hidden bg-gray-900 text-white p-4 hidden">
+    <a href="#home" class="block py-2">Home</a>
+    <a href="#about" class="block py-2">About</a>
+    <a href="#projects" class="block py-2">Projects</a>
+    <a href="#certifications" class="block py-2">Certifications</a>
+    <a href="#contact" class="block py-2">Contact</a>
+</div>
+
+<!-- JavaScript for Hamburger Menu -->
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const hamburger = document.getElementById("hamburger");
+        const mobileMenu = document.getElementById("mobileMenu");
+
+        hamburger.addEventListener("click", function () {
+            mobileMenu.classList.toggle("hidden");
+        });
+    });
+</script>
+
 </nav>
 
 <!-- Hero Section -->
@@ -54,7 +66,7 @@
     
     <div class="relative z-10 container mx-auto px-6">
         <h1 class="text-5xl font-extrabold mb-4">
-            Hello, I'm a <span class="text-blue-400" id="typingText">Software Developer</span>
+           🚀 Hello, I'm a <span class="text-blue-400" id="typingText">Software Developer</span>
         </h1>
         <p class="text-xl max-w-2xl mx-auto">
             "Transforming innovative ideas into seamless, engaging, and impactful digital experiences through cutting-edge development."
@@ -116,7 +128,7 @@
 
 <!-- About Me Section -->
 <section id="about" class="container mx-auto py-16 px-6 bg-gradient-to-r from-blue-900 via-gray-900 to-gray-800 text-white rounded-lg shadow-lg">
-    <h2 class="text-4xl font-extrabold mb-6 text-center">🚀 Hello, I am <span class="text-blue-400">Mohammed</span></h2>
+<!--     <h2 class="text-4xl font-extrabold mb-6 text-center">🚀 Hello, I am <span class="text-blue-400">Mohammed</span></h2> -->
     <p class="text-lg text-gray-300 mb-6 text-center">
         Welcome to my portfolio website! Here, you'll explore my journey in software development, projects, and certifications.
     </p>
@@ -321,7 +333,8 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
             <!-- Certification 1 -->
             <div class="relative group">
-                <img src="certification1.jpg" alt="Certification 1" class="w-full h-auto rounded-lg shadow-lg cursor-pointer transition-transform duration-300 transform group-hover:scale-105 group-hover:shadow-xl" onclick="openModal(this)">
+                <img src="certification1.jpg" alt="Certification 1" class="w-full h-auto rounded-lg shadow-lg cursor-pointer transition-transform duration-300 transform group-hover:scale-105 group-hover:shadow-xl" 
+                     onclick="openModal(this)">
                 <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 flex items-center justify-center text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                     <span class="text-lg font-semibold">View Certificate</span>
                 </div>
@@ -329,7 +342,8 @@
 
             <!-- Certification 2 -->
             <div class="relative group">
-                <img src="certification2.jpg" alt="Certification 2" class="w-full h-auto rounded-lg shadow-lg cursor-pointer transition-transform duration-300 transform group-hover:scale-105 group-hover:shadow-xl" onclick="openModal(this)">
+                <img src="certification2.jpg" alt="Certification 2" class="w-full h-auto rounded-lg shadow-lg cursor-pointer transition-transform duration-300 transform group-hover:scale-105 group-hover:shadow-xl" 
+                     onclick="openModal(this)">
                 <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 flex items-center justify-center text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                     <span class="text-lg font-semibold">View Certificate</span>
                 </div>
@@ -337,13 +351,43 @@
 
             <!-- Certification 3 -->
             <div class="relative group">
-                <img src="certification3.jpg" alt="Certification 3" class="w-full h-auto rounded-lg shadow-lg cursor-pointer transition-transform duration-300 transform group-hover:scale-105 group-hover:shadow-xl" onclick="openModal(this)">
+                <img src="certification3.jpg" alt="Certification 3" class="w-full h-auto rounded-lg shadow-lg cursor-pointer transition-transform duration-300 transform group-hover:scale-105 group-hover:shadow-xl" 
+                     onclick="openModal(this)">
                 <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 flex items-center justify-center text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                     <span class="text-lg font-semibold">View Certificate</span>
                 </div>
             </div>
         </div>
     </div>
+</section>
+
+<!-- Certificate Modal -->
+<div id="certificateModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden">
+    <div class="relative">
+        <button onclick="closeModal()" class="absolute top-2 right-2 bg-white text-black px-3 py-1 rounded-full text-xl font-bold">✕</button>
+        <img id="modalImage" src="" alt="Certificate" class="max-w-full max-h-[90vh] rounded-lg shadow-2xl">
+    </div>
+</div>
+
+<!-- JavaScript for Modal -->
+<script>
+    function openModal(img) {
+        document.getElementById("modalImage").src = img.src;
+        document.getElementById("certificateModal").classList.remove("hidden");
+    }
+
+    function closeModal() {
+        document.getElementById("certificateModal").classList.add("hidden");
+    }
+
+    // Close modal when clicking outside the image
+    document.getElementById("certificateModal").addEventListener("click", function(event) {
+        if (event.target === this) {
+            closeModal();
+        }
+    });
+</script>
+
 
     <!-- Modal (Lightbox for Certificates) -->
     <div id="imageModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-80 hidden">
@@ -423,10 +467,10 @@
   
 <!-- Footer -->
 <footer class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-900 py-6 text-center text-gray-400">
-    <div class="container mx-auto flex flex-col md:flex-row items-center justify-between space-y-4 md:space-y-0 px-6">
+    <div class="container mx-auto flex flex-col md:flex-col items-center justify-center space-y-4 md:space-y-2 px-6">
         
-        <!-- Social Icons -->
-        <div class="flex space-x-6">
+        <!-- Social Icons (Centered) -->
+        <div class="flex space-x-6 justify-center">
             <!-- LinkedIn Icon -->
             <a href="https://linkedin.com/in/mohammed-ali-khan-24b81a278" target="_blank" aria-label="LinkedIn" 
                class="text-gray-400 hover:text-blue-400 transition duration-300 transform hover:scale-110">
@@ -444,12 +488,13 @@
             </a>
         </div>
 
-        <!-- Footer Text -->
-        <div class="text-sm opacity-80 hover:opacity-100 transition duration-300">
+        <!-- Footer Text (Below Icons) -->
+        <div class="text-sm opacity-80 hover:opacity-100 transition duration-300 text-center">
             &copy; 2024 Mohammed Ali Khan. All Rights Reserved.
         </div>
     </div>
 </footer>
+
 
 <script>
     const hamburger = document.getElementById('hamburger');
