--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <a href="#contact" class="text-white hover:text-blue-400 transition duration-300">Contact</a>
         </div>
 
-    <!-- Mobile Hamburger Menu -->
-<div class="lg:hidden">
+ <!-- Mobile Hamburger Menu -->
+<div class="lg:hidden relative">
     <button id="hamburger" class="text-white text-3xl focus:outline-none">
         &#9776;
     </button>
 </div>
 
-<!-- Mobile Dropdown Menu -->
-<div id="mobileMenu" class="lg:hidden bg-gray-900 text-white p-4 hidden">
+<!-- Mobile Dropdown Menu (Initially Hidden) -->
+<div id="mobileMenu" class="lg:hidden absolute top-12 left-0 w-full bg-gray-900 text-white p-4 shadow-lg hidden transition-all duration-300 ease-in-out">
     <a href="#home" class="block py-2">Home</a>
     <a href="#about" class="block py-2">About</a>
     <a href="#projects" class="block py-2">Projects</a>
@@ -51,30 +51,19 @@
         const hamburger = document.getElementById("hamburger");
         const mobileMenu = document.getElementById("mobileMenu");
 
-        hamburger.addEventListener("click", function () {
+        hamburger.addEventListener("click", function (event) {
             mobileMenu.classList.toggle("hidden");
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener("click", function (event) {
+            if (!hamburger.contains(event.target) && !mobileMenu.contains(event.target)) {
+                mobileMenu.classList.add("hidden");
+            }
         });
     });
 </script>
 
-</nav>
-
-<!-- Hero Section -->
-<header class="relative flex items-center justify-center min-h-screen text-center text-white">
-    <!-- Animated Background -->
-    <div class="absolute inset-0 bg-gradient-to-r from-blue-900 via-purple-700 to-blue-900 animate-gradientMove"></div>
-    
-    <div class="relative z-10 container mx-auto px-6">
-        <h1 class="text-5xl font-extrabold mb-4">
-           🚀 Hello, I'm a <span class="text-blue-400" id="typingText">Software Developer</span>
-        </h1>
-        <p class="text-xl max-w-2xl mx-auto">
-            "Transforming innovative ideas into seamless, engaging, and impactful digital experiences through cutting-edge development."
-        </p>
-        <a href="#projects" class="mt-6 inline-block bg-blue-500 px-6 py-3 rounded-lg text-white font-semibold text-lg shadow-lg hover:bg-blue-600 hover:shadow-xl transition duration-300 transform hover:scale-105">
-            View My Work
-        </a>
-    </div>
 </header>
 
 <!-- JavaScript for Mobile Menu & Typing Effect -->
@@ -365,6 +354,36 @@
 <div id="certificateModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden">
     <div class="relative">
         <button onclick="closeModal()" class="absolute top-2 right-2 bg-white text-black px-3 py-1 rounded-full text-xl font-bold">✕</button>
+        <img id="modalImg" src="" alt="Certificate" class="max-w-full max-h-[90vh] rounded-lg shadow-2xl">
+    </div>
+</div>
+
+<!-- JavaScript for Modal -->
+<script>
+    function openModal(img) {
+        const modal = document.getElementById("certificateModal");
+        const modalImg = document.getElementById("modalImg");
+        modalImg.src = img.src;
+        modal.classList.remove("hidden");
+    }
+
+    function closeModal() {
+        document.getElementById("certificateModal").classList.add("hidden");
+    }
+
+    // Close modal when clicking outside the image
+    document.getElementById("certificateModal").addEventListener("click", function(event) {
+        if (event.target === this) {
+            closeModal();
+        }
+    });
+</script>
+
+
+<!-- Certificate Modal -->
+<div id="certificateModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden">
+    <div class="relative">
+        <button onclick="closeModal()" class="absolute top-2 right-2 bg-white text-black px-3 py-1 rounded-full text-xl font-bold">✕</button>
         <img id="modalImage" src="" alt="Certificate" class="max-w-full max-h-[90vh] rounded-lg shadow-2xl">
     </div>
 </div>
@@ -461,9 +480,6 @@
         </form>
     </div>
 </section>
-
-
-
   
 <!-- Footer -->
 <footer class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-900 py-6 text-center text-gray-400">
