--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             </a>
 
             <!-- GitHub Icon -->
-            <a href="https://github.com/saqeebalimk" target="_blank" aria-label="GitHub" 
+            <a href="https://github.com/saqeebalimk/M4S" target="_blank" aria-label="GitHub" 
                class="text-gray-400 hover:text-white transition duration-300 transform hover:scale-110">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M12 0C5.373 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.385.6.11.82-.26.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.043-1.416-4.043-1.416-.546-1.385-1.333-1.754-1.333-1.754-1.09-.746.083-.73.083-.73 1.205.085 1.84 1.24 1.84 1.24 1.07 1.835 2.807 1.305 3.492.997.11-.776.42-1.305.764-1.605-2.665-.3-5.467-1.332-5.467-5.932 0-1.31.47-2.383 1.235-3.22-.124-.303-.535-1.523.116-3.176 0 0 1.008-.322 3.3 1.23.96-.267 1.99-.4 3.015-.405 1.025.005 2.055.138 3.015.405 2.29-1.552 3.297-1.23 3.297-1.23.653 1.653.243 2.873.12 3.176.77.837 1.235 1.91 1.235 3.22 0 4.61-2.807 5.63-5.48 5.922.43.37.815 1.102.815 2.222 0 1.606-.015 2.902-.015 3.295 0 .32.22.694.825.577C20.565 21.795 24 17.303 24 12c0-6.627-5.373-12-12-12z"></path>
