--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </p>
 
     <div class="text-center mt-6">
-        <a href="https://drive.google.com/file/d/1yrayeUBrS7WHuwb4Ji2exbOLjdrvTwCh/view?usp=drive_link" download="Mohammed_Resume"
+        <a href="https://drive.google.com/file/d/1-YrriHjEhCZKUheTddYkMGyLpLkxUHjz/view?usp=sharing" download="Mohammed_Resume"
             class="inline-block bg-blue-500 px-6 py-3 rounded-full text-white font-semibold text-lg shadow-md hover:bg-blue-600 transition duration-300">
             📄 My Resume
         </a>
@@ -253,6 +253,9 @@
 
             <div class="bg-gray-800 p-4 rounded-lg text-center shadow-lg transition duration-300 transform hover:scale-105 hover:bg-blue-600">
                 <h3 class="font-semibold text-lg">TypeScript</h3>
+            </div>
+           <div class="bg-gray-800 p-4 rounded-lg text-center shadow-lg transition duration-300 transform hover:scale-105 hover:bg-blue-600">
+                <h3 class="font-semibold text-lg">Java</h3>
             </div>
 
             <div class="bg-gray-800 p-4 rounded-lg text-center shadow-lg transition duration-300 transform hover:scale-105 hover:bg-blue-600">
